[package]
name = "cyberdeus"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cyberdeus"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl =  { version = "0.29.0", features = ["metadata"] }
solana-program = "=1.18.26"
mpl-token-metadata = "3.2.1"
rand = "=0.8.5"
ahash = "=0.8.6"
